--- a/src/styles/pages/components-dash/views-dash/promocion.scss
+++ b/src/styles/pages/components-dash/views-dash/promocion.scss
@@ -5,7 +5,7 @@
     min-width: 300px;
     font-size: 1.8rem;
     line-height: 4.4rem;
-    //scroll-snap-align: center;
+    //scroll-snap-align: center;    //
     //background-color: rgb(153, 211, 208);
 
 }
@@ -25,7 +25,7 @@
 }
 .promoDescription h2 {
     margin: 30px 0;
-    font-size: 3.6rem;
+    font-size: 2.4rem;
     font-weight: bold;
     color:black;
 }
@@ -51,6 +51,9 @@ li span {
         flex-direction: row-reverse;
         padding: 0 0;
         padding: 3rem 0 4.5rem 3rem ;
+    }
+    .promoDescription h2 {
+        font-size: 3.6rem;
     }
     .promoDescription {
         width: 50%;
