--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -323,7 +323,6 @@
 .dashboard {
   width: 100vw;
   min-width: 290px;
-  padding-bottom: 100px;
   background-color: #E5E5E5;
   height: 100vh;
 }
@@ -337,7 +336,9 @@
   min-width: 290px;
   max-width: 1500px;
   padding-top: 50px;
+  padding-bottom: 120px;
   height: auto;
+  background-color: #E5E5E5;
 }
 
 .userInfo {
@@ -415,7 +416,6 @@
   }
 
   .dash__container {
-    background-color: salmon;
     padding-bottom: 70px;
   }
 
@@ -424,10 +424,6 @@
   }
 }
 @media screen and (min-width: 767px) {
-  .dash__container {
-    background-color: rgba(231, 216, 227, 0.87);
-  }
-
   .blackboard {
     width: 93%;
     margin: 0 auto;
@@ -489,7 +485,6 @@
   }
 
   .dash__container {
-    background-color: pink;
     padding-left: 275px;
   }
 
@@ -537,36 +532,85 @@
     width: 100%;
   }
 }
-.preparation__container {
-  padding: 40px 5%;
-  height: auto;
-  margin-bottom: 100px;
-  font-size: 1.8rem;
-  line-height: 4rem;
-  text-align: justify;
+.prepaContainer {
   position: relative;
+  padding: 60px 5rem;
+  height: auto;
   min-width: 300px;
-  background-color: #cae25c;
-  scroll-snap-align: center;
+  font-size: 1.8rem;
+  line-height: 4.4rem;
 }
 
-.preparation__image img {
-  height: 100%;
+.prepaDescription {
+  display: flex;
+  flex-direction: column;
+}
+
+.prepaImage {
+  max-width: 500px;
+  margin: auto;
+}
+
+.prepaImage img {
   width: 100%;
+  height: auto;
 }
 
-.preparation__description h2 {
-  text-align: center;
+.prepaDescription h2 {
   margin: 30px 0;
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: black;
+}
+
+li {
   font-weight: bold;
 }
 
-.preparation__description {
-  display: flex;
-  flex-direction: column;
-  padding: 0 18px;
+li span {
+  font-weight: 400;
 }
 
+@media screen and (min-width: 499px) {
+  .prepaContainer {
+    padding: 80px 4rem;
+  }
+}
+@media screen and (min-width: 767px) {
+  .prepaContainer {
+    padding: 80px 9rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .prepaContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 0;
+    padding: 3rem 0 4.5rem 3rem;
+  }
+
+  .prepaDescription h2 {
+    font-size: 3.6rem;
+  }
+
+  .prepaDescription {
+    width: 50%;
+  }
+
+  .prepaImage {
+    margin: auto 0;
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .prepaDescription {
+    width: 60%;
+  }
+
+  .prepaImage {
+    width: 40%;
+  }
+}
 .promoContainer {
   position: relative;
   padding: 60px 5rem;
@@ -593,7 +637,7 @@
 
 .promoDescription h2 {
   margin: 30px 0;
-  font-size: 3.6rem;
+  font-size: 2.4rem;
   font-weight: bold;
   color: black;
 }
@@ -624,6 +668,10 @@ li span {
     padding: 3rem 0 4.5rem 3rem;
   }
 
+  .promoDescription h2 {
+    font-size: 3.6rem;
+  }
+
   .promoDescription {
     width: 50%;
   }
@@ -642,66 +690,167 @@ li span {
     width: 40%;
   }
 }
-.tramite__container {
-  padding: 40px 1rem;
-  height: auto;
-  margin-bottom: 100px;
-  font-size: 1.8rem;
-  line-height: 4rem;
-  text-align: justify;
+.tramiteContainer {
   position: relative;
+  padding: 60px 5rem;
+  height: auto;
   min-width: 300px;
-  background-color: #5cb8e2;
-  scroll-snap-align: center;
+  font-size: 1.8rem;
+  line-height: 4.4rem;
 }
 
-.tramite__image img {
+.tramiteDescription {
+  display: flex;
+  flex-direction: column;
+}
+
+.tramiteImage {
+  max-width: 500px;
+  margin: auto;
+}
+
+.tramiteImage img {
+  width: 100%;
+  height: auto;
+}
+
+.tramiteDescription h2 {
+  margin: 30px 0;
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: black;
+}
+
+li {
+  font-weight: bold;
+}
+
+li span {
+  font-weight: 400;
+}
+
+@media screen and (min-width: 499px) {
+  .tramiteContainer {
+    padding: 80px 4rem;
+  }
+}
+@media screen and (min-width: 767px) {
+  .tramiteContainer {
+    padding: 80px 9rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .tramiteContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 0;
+    padding: 3rem 0 4.5rem 3rem;
+  }
+
+  .tramiteDescription h2 {
+    font-size: 3.6rem;
+  }
+
+  .tramiteDescription {
+    width: 50%;
+  }
+
+  .tramiteImage {
+    margin: auto 0;
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .tramiteDescription {
+    width: 60%;
+  }
+
+  .tramiteImage {
+    width: 40%;
+  }
+}
+.escrituraContainer {
+  position: relative;
+  padding: 60px 5rem;
+  height: auto;
+  min-width: 300px;
+  font-size: 1.8rem;
+  line-height: 4.4rem;
+}
+
+.escrituraDescription {
+  display: flex;
+  flex-direction: column;
+}
+
+.escriImage {
+  max-width: 500px;
+  margin: auto;
+}
+
+.escriImage img {
   width: 100%;
   height: 100%;
 }
 
-.tramite__description h2 {
+.escrituraDescription h2 {
   text-align: center;
   margin: 30px 0;
   font-weight: bold;
 }
 
-.tramite__description {
-  display: flex;
-  flex-direction: column;
-  padding: 0 18px;
-}
-
-.escritura__container {
-  padding: 40px 1rem;
-  height: auto;
-  margin-bottom: 100px;
-  font-size: 1.8rem;
-  line-height: 4rem;
-  text-align: justify;
-  position: relative;
-  min-width: 300px;
-  background-color: #e25ccc;
-  scroll-snap-align: center;
-}
-
-.escritura__image img {
-  width: 100%;
-  height: 100%;
-}
-
-.escritura__description h2 {
-  text-align: center;
-  margin: 30px 0;
+li {
   font-weight: bold;
 }
 
-.escritura__description {
-  display: flex;
-  flex-direction: column;
-  padding: 0 18px;
+li span {
+  font-weight: 400;
 }
 
+@media screen and (min-width: 499px) {
+  .escrituraContainer {
+    padding: 80px 4rem;
+  }
+}
+@media screen and (min-width: 767px) {
+  .escrituraContainer {
+    padding: 80px 9rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .escrituraContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 0;
+    padding: 3rem 0 4.5rem 3rem;
+  }
+
+  .escrituraDescription h2 {
+    font-size: 3.6rem;
+  }
+
+  .escrituraDescription {
+    width: 50%;
+  }
+
+  .escriImage {
+    margin: auto 0;
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .escrituraDescription {
+    width: 60%;
+  }
+
+  .escriImage {
+    width: 40%;
+  }
+}
+/*
+* font to html all document: font-family: 'Lato', sans-serif;
+* font to headlines and menu: font-family: 'Mulish', sans-serif;
+*/
 * {
   box-sizing: border-box;
   padding: 0;
