--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,50 +1,57 @@
 /* colors */
 /* Herencias */
 .login {
-  width: 100%;
-  display: flex;
+  width: 100vw;
+  height: 100vh;
   max-width: 1450px;
 }
 
-.formLogin {
+.formLogin__Container {
   width: 100%;
+  height: 100%;
+}
+
+.formLogin {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 15%;
+  width: 88%;
+  max-width: 600px;
+  height: 70vh;
+  margin: 30px auto;
   background-color: #000000;
 }
 
-.imgLogin__img {
+.imgLogin__Container {
   display: none;
 }
 
 .formLogin__div--grey {
   width: 100%;
-  height: 18%;
+  height: 55px;
   background-color: rgba(246, 235, 229, 0.5);
-  margin-bottom: 30%;
 }
 
 .formLogin__h1 {
   color: #ffffff;
-  font-size: 8vw;
+  font-size: 6vw;
   font-weight: lighter;
   margin-bottom: 15%;
 }
 
 .formLogin__input--id, .formLogin__input--pass {
-  width: 80%;
+  width: 77%;
+  height: auto;
   margin-bottom: 10px;
   border-radius: 5px;
   padding-left: 20px;
   border-style: none;
-  height: 70px;
+  height: 45px;
 }
 
 .formLogin__btn {
-  width: 50%;
-  height: 50px;
+  width: 55%;
+  height: 35px;
   background-color: #C9BCAC;
   color: #000000;
   border-style: none;
@@ -54,104 +61,44 @@
 
 .formLogin__paragraph {
   color: #ffffff;
-  font-size: 4vw;
+  font-size: 2.2vw;
 }
 
 .formLogin__anchor {
   color: #ffffff;
 }
 
-@media only screen and (min-width: 600px) {
-  .formLogin__input--id, .formLogin__input--pass {
-    width: 70%;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    padding-left: 20px;
-    border-style: none;
+@media only screen and (min-width: 1024px) {
+  .login {
+    display: flex;
+    flex-direction: row;
   }
 
-  .formLogin__h1 {
-    font-size: 6vw;
-  }
-
-  .formLogin__btn {
-    width: 35%;
-  }
-
-  .formLogin__div--grey {
-    height: 14%;
-  }
-}
-@media only screen and (min-width: 750px) {
-  .formLogin__input--id, .formLogin__input--pass {
-    width: 400px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    padding-left: 20px;
-    border-style: none;
-    height: 75px;
-  }
-
-  .formLogin__btn {
-    width: 230px;
-    height: 60px;
-  }
-
-  .formLogin__h1 {
-    font-size: 40px;
-  }
-
-  .formLogin__paragraph {
-    font-size: 22px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .formLogin__div--grey {
-    margin-bottom: 20%;
-  }
-
-  .formLogin__h1 {
-    margin-bottom: 10%;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .formLogin, .imgLogin {
-    width: 50%;
-  }
-
-  .formLogin__div--grey {
-    height: 7%;
-    margin-bottom: 30%;
-  }
-
-  .imgLogin {
-    position: relative;
-    overflow: hidden;
-    height: 100vh;
-  }
-
-  .imgLogin__img {
+  .formLogin__Container {
     display: block;
-    position: absolute;
+    width: 42%;
+  }
+
+  .imgLogin__Container {
+    display: block;
+    width: 58%;
+  }
+
+  .imgLoginContainer__img {
     width: 100%;
     height: 100%;
   }
 
-  .formLogin__input--id, .formLogin__input--pass {
-    width: 530px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    padding-left: 20px;
-    border-style: none;
-    height: 65px;
-    min-height: 65px;
+  .formLogin {
+    width: 100%;
   }
 
-  .formLogin__btn {
-    width: 280px;
-    height: 50px;
-    min-height: 50px;
-    margin-bottom: 12%;
+  .formLogin__h1 {
+    font-size: 4vw;
+  }
+
+  .formLogin__paragraph {
+    font-size: 1.5vw;
   }
 }
 .menu {
