--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -102,7 +102,6 @@
   }
 }
 .menu {
-  position: relative;
   position: fixed;
   z-index: 100;
   height: 109px;
@@ -274,7 +273,7 @@
   height: auto;
 }
 
-.btnOpenMenu {
+#btnOpenMenu {
   display: none;
 }
 
@@ -345,25 +344,22 @@
 }
 
 .btnsChangeViews {
-  height: 28px;
-  width: 115px;
-  padding: 20px;
+  height: 38px;
+  width: 140px;
   border: none;
   border-radius: 1px;
+  color: #413f3f;
+  font-size: 16px;
   background-color: #CAB98E;
 }
 
-.hideBtn {
-  opacity: 50%;
-}
-
 @media screen and (min-width: 499px) {
-  .btnOpenMenu {
+  #btnOpenMenu {
     display: block;
     position: absolute;
     top: 33px;
     left: 20px;
-    width: 50px;
+    width: 40px;
   }
 
   .dash__container {
@@ -821,6 +817,10 @@ body {
 .is__active {
   left: 0;
   transition-duration: 1s;
+}
+
+.hideBtn {
+  opacity: 30%;
 }
 
 /*# sourceMappingURL=styles.css.map */
