Changing the styles of the blackboart views to a single page

--- a/src/styles/pages/dash.scss
+++ b/src/styles/pages/dash.scss
@@ -1,39 +1,21 @@
 
-/*
-* .progressStatusBar since tablet
-*/
-.progressStatusBar {
+// *Hidden elements from mobile first* //
+    //progressStatusBar is block to tablet
+    // userInfo__propertyLink is block to desktop
+    // #btnOpenMenu only in vertical menu
+.progressStatusBar, .userInfo__propertyLink, #btnOpenMenu {
     display:none;
 }
-/*
-* .userInfo > div  share link only desktop
-*/
-.userInfo__propertyLink{
-    display: none;
-}
-//   //    //
-.dashboard {
-    width: 100vw;
-    min-width: 290px;
-    background-color:#E5E5E5;
-    // height: 100vh;
-    height: auto;
-    //overflow: hidden;
-    //padding-bottom: 100px;
-
-}
-#btnOpenMenu { // only in vertical menu
-    display: none;
-}
+//   *Elements styles from mobile* //
 .dash__container {
+    position: relative;
     width: 100vw;
+    height: auto;
     min-width: 290px;
     max-width: 1500px;
     padding-top: 50px;
     padding-bottom: 120px;
-    height: auto;
     background-color:#E5E5E5;
-
 }
 .userInfo {
     display: flex;
@@ -51,9 +33,6 @@
     width: 100%;
     border: 1px solid #d0d0d3;
     border-radius: .5rem ;
-    //overflow-x: scroll;
-    //scroll-behavior: contain;
-    //scroll-snap-type: x proximity;
     background-color: #FFFFFF;
 }
 .progressStatusBarCell {
@@ -87,7 +66,6 @@
     justify-content: space-between;
     background:#FFFFFF;
     border-bottom: 1px solid #d0d0d3;
-
 }
 .btnsChangeViews {
     height: 38px;
@@ -99,10 +77,9 @@
     background-color:#CAB98E;
 
 }
+//   * media 499px change menu horizontal to vertical * //
 
-
-
-@media screen and (min-width:499px) {
+@media screen and (min-width:499px) { /// arreglas estas 
     #btnOpenMenu {
         display: block;
         position: absolute;
@@ -111,7 +88,6 @@
         width: 40px;
     }
     .dash__container {
-        //background-color:salmon;
         padding-bottom: 70px;
     }
     .userInfo  h1 {
@@ -120,9 +96,7 @@
     }
 }
 @media screen and (min-width:767px) {
-    .dash__container {
-        // background-color:rgba(230, 29, 176, 0.87);
-    }
+   
     .blackboard {
         width: 93%;
         margin: 0 auto;
@@ -137,7 +111,6 @@
         width: 96%;
         margin: 15px auto;
         text-align: center;
-        //background-color: rgba(140, 10, 101, 0.329);
 }
     .progressStatusBar > div {
         width:38%;
@@ -167,9 +140,6 @@
         height: 25px;
         border-radius: 8px;
         border: 1px solid #d0d0d3;
-        //width: inherit;
-        //border-style: none;
-        //background-color: rgb(238, 24, 209);
         background-color: rgb(213, 228, 228);
     }
     .btnsChangeViewsToCell {
@@ -181,19 +151,12 @@
         display: none;
     }
     .dash__container {
-        // background-color:pink;
         padding-left: 275px;
-        //height: 100vh;
-
     }
     .blackboard {
         width: 98%;
         margin: 0 auto;
-        //flex-direction:column;
-        //overflow-x: scroll;
         overflow-x: hidden;
-        // scroll-behavior: contain;
-        // scroll-snap-type: x proximity;
     }
     .userInfo {
         margin: 0 13px;
@@ -244,3 +207,8 @@
         //background-color: mediumblue;
     }
 }
+// @media screen and (min-width:1200px){
+//     .dash__container {
+//         height: 100vh;
+//     }
+// }
