--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -7,7 +7,9 @@ $share-heigth: 50%;
     z-index: 100;
     height: 109px;
     width: 100%;
-    top: calc(100vh - 109px);
+    bottom: 0;
+
+    // top: calc(100vh - 109px);
     background-color: $menu-background;
         .menu__container {
         display: flex;
@@ -32,7 +34,7 @@ $share-heigth: 50%;
                         width: 100%;
                         height: 150%;
                     }
-            } 
+            }
             .nav {
                 display: flex;
                 flex-direction: row;
@@ -82,10 +84,11 @@ $share-heigth: 50%;
 
 @media screen and(min-width:499px) {
     .menu {
+        position: absolute;
         top: 0;
         left: -275px;
         width: 275px;
-        height: 100vh;
+        height: 100%;
         padding-top: 2%;
         transition-duration:  1s;
             .menu__container {
