--- a/src/styles/pages/blackBoardViews.scss
+++ b/src/styles/pages/blackBoardViews.scss
@@ -1,30 +1,28 @@
-.escrituraContainer {
+.boardView__container {
     position: relative;
-    padding: 60px 5rem;
     height: auto;
     min-width: 300px;
+    padding: 60px 5rem;
     font-size: 1.8rem;
     line-height: 4.4rem;
-    //scroll-snap-align: center;    //
-    //background-color: rgb(153, 211, 208);
-
 }
-.escrituraDescription {
+.boardView__description {
     display: flex;
     flex-direction: column;
 }
-.escriImage {
-    max-width: 500px;
+.boardView__image {
+    max-width: 400px;
     margin:auto;
 }
-.escriImage img {
+.boardView__image img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
-.escrituraDescription h2{
-    text-align: center;
+.boardView__description h2 {
     margin: 30px 0;
+    font-size: 2.4rem;
     font-weight: bold;
+    color:black;
 }
 li {
     font-weight: bold;
@@ -33,43 +31,38 @@ li span {
     font-weight: 400;
 }
 @media screen and(min-width:499px) {
-    .escrituraContainer {
+    .boardView__container {
         padding: 80px 4rem;
     }
 }
 @media screen and(min-width:767px) {
-    .escrituraContainer {
+    .boardView__container {
         padding: 80px 9rem;
     }
 }
 @media screen and(min-width:1024px) {
-    .escrituraContainer  {
+    .boardView__container  {
         display: flex;
         flex-direction: row-reverse;
         padding: 0 0;
         padding: 3rem 0 4.5rem 3rem ;
     }
-    .escrituraDescription h2 {
+    .boardView__description {
+        width: 50%;
+    }
+    .boardView__description h2 {
         font-size: 3.6rem;
     }
-    .escrituraDescription {
-        width: 50%;
-        //background-color: pink;
-    }
-    .escriImage {
-        // background-color: lightblue;
-        //max-width: 500px;
+    .boardView__image {
         margin: auto 0;
         width: 50%;
     }
-
 }
 @media screen and(min-width:1200px) {
-    .escrituraDescription {
+    .boardView__description {
         width: 60%;
     }
-    .escriImage {
+    .boardView__image {
         width: 40%;
     }
 }
-
