--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,28 +1,22 @@
-@import './pages/login.scss';
 @import './menu.scss';
+@import './pages/login.scss';
 @import './pages/dash.scss';
-@import './pages/components-dash/views-dash/preparacion.scss';
-@import './pages/components-dash/views-dash/promocion.scss';
-@import './pages/components-dash/views-dash/tramite.scss';
-@import './pages/components-dash/views-dash/escritura.scss';
+@import './pages/blackBoardViews.scss';
 
-/*
-* font to html all document: font-family: 'Lato', sans-serif;
-* font to headlines and menu: font-family: 'Mulish', sans-serif;
-*/
-*{
+// * font to html all document: font-family: 'Lato', sans-serif;
+// * font to headlines and menu: font-family: 'Mulish', sans-serif;
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-html{
+html {
     font-size: 62.5%;
     font-family: 'Lato', sans-serif;
 }
 
 body {
     background-color: black;
-
 }
 .is__active {
     left: 0;
